--- a/package.json
+++ b/package.json
@@ -4,28 +4,26 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "test": "npm run lint && npm run type-check && echo '✅ Basic quality checks passed - add unit tests here later'",
-    "test:ci": "npm run test && npm run build",
+    "test": "npm run lint && npm run type-check",
+    "test:build": "npm run test && npm run build",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch",
     "pre-commit": "lint-staged",
     "prepare": "husky",
-    "test:build": "npm run build && echo '✅ Build test successful'",
-    "test:all": "npm run lint && npm run type-check && npm run test:build",
-    "validate:pre-deploy": "npm run test:all && echo '🎉 Ready for deployment!'",
-    "validate:security": "npm audit --audit-level=moderate",
+    "validate": "npm run test:build && npm audit --audit-level=moderate",
     "clean": "rm -rf .next out node_modules/.cache",
     "clean:all": "npm run clean && rm -rf node_modules && npm install",
-    "setup:dev": "npm install",
-    "setup:hooks": "husky install && chmod +x .husky/pre-commit",
-    "status": "echo '📊 Project Status:' && npm run lint --silent && npm run type-check --silent && echo '✅ All checks passed'",
-    "workflow:pr": "npm run lint:fix && npm run format && npm run type-check && npm run build",
-    "workflow:hotfix": "npm run lint:fix && npm run type-check && npm run build && echo '🔥 Hotfix ready'"
+    "analyze": "ANALYZE=true next build",
+    "check:deps": "npx npm-check-updates",
+    "check:deps:update": "npx npm-check-updates -u",
+    "imports:check": "npx unimported"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -90,20 +88,22 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   },
+  "packageManager": "npm@10.0.0",
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{json,md,yml,yaml}": [
+    "*.{json,yml,yaml}": [
       "prettier --write"
     ]
   }
