feat(prettier): enhance config with Tailwind plugin and file-specific rules
- Add prettier-plugin-tailwindcss for automatic class sorting
- Configure tailwindFunctions for clsx and cn utilities
- Add overrides for JSON (wider printWidth) and YAML (double quotes)
- Add parser config for tsconfig.json (JSONC support)

--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,27 @@
   "bracketSpacing": true,
   "bracketSameLine": false,
   "arrowParens": "avoid",
-  "proseWrap": "preserve"
+  "proseWrap": "preserve",
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindFunctions": ["clsx", "cn"],
+  "overrides": [
+    {
+      "files": "*.json",
+      "options": {
+        "printWidth": 100
+      }
+    },
+    {
+      "files": ["*.yml", "*.yaml"],
+      "options": {
+        "singleQuote": false
+      }
+    },
+    {
+      "files": ["tsconfig.json", "jsconfig.json"],
+      "options": {
+        "parser": "jsonc"
+      }
+    }
+  ]
 }
