feat(prettier): update ignore patterns to exclude markdown and build artifacts
- Add comprehensive ignore patterns for lockfiles, caches, and generated files
- Exclude all markdown files to preserve original formatting
- Add patterns for certificates, databases, logs, and vendor files
- Include Swagger/OpenAPI generated files in ignore list

--- a/.prettierignore
+++ b/.prettierignore
@@ -2,6 +2,9 @@
 node_modules/
 .pnp/
 .pnp.js
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # Next.js
 .next/
@@ -19,16 +22,78 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
 
 # Env files
 .env*
+!.env.example
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
 # Testing
 coverage/
+.nyc_output/
 
 # Generated files
-tsconfig.tsbuildinfo 
+tsconfig.tsbuildinfo
+*.tsbuildinfo
+
+# Cache
+.eslintcache
+.stylelintcache
+.prettiercache
+
+# OS files
+Thumbs.db
+
+# Git
+.git/
+.gitattributes
+
+# Documentation auto-generated
+/docs/api/
+
+# README files (keep original formatting)
+README.md
+**/README.md
+*.md
+
+# Temporary files
+*.tmp
+*.temp
+
+# Minified files
+*.min.js
+*.min.css
+
+# Source maps
+*.map
+
+# Certificates
+*.crt
+*.key
+
+# Database
+*.sqlite
+*.db
+
+# Logs
+logs/
+*.log
+
+# Public assets (images, fonts)
+public/images/
+public/fonts/
+
+# External libraries
+public/vendor/
+
+# Swagger/OpenAPI
+swagger.json
+openapi.json 
