--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,24 +8,32 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main]
+  workflow_dispatch: # Permet le déclenchement manuel
+
+env:
+  NODE_VERSION: "20"
+  ENABLE_TURBOPACK: false # Désactivé en CI pour la stabilité
 
 jobs:
   quality:
     runs-on: ubuntu-latest
     name: Code Quality
+    timeout-minutes: 15
 
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Pour l'analyse complète si nécessaire
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
 
       - name: 📦 Install dependencies
-        run: npm ci
+        run: npm ci --prefer-offline --no-audit
 
       - name: 🔍 Run ESLint
         run: npm run lint
@@ -48,21 +56,48 @@ jobs:
           NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
           NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
           NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
+          # Optimisations Next.js
+          NEXT_TELEMETRY_DISABLED: 1
         run: npm run build
 
       - name: 🔐 Security Audit
         run: npm audit --audit-level=moderate
+        continue-on-error: true # Ne pas bloquer si des vulnérabilités mineures
 
       - name: 📊 Bundle Size Analysis
         run: |
           echo "📦 Analyzing bundle size..."
           if [ -d ".next" ]; then
-            du -sh .next/
-            echo "✅ Build artifacts generated successfully"
+            # Taille totale
+            TOTAL_SIZE=$(du -sh .next/ | cut -f1)
+            echo "Total build size: $TOTAL_SIZE"
+            
+            # Tailles détaillées
+            echo "### Detailed sizes:"
+            du -sh .next/static/chunks/*.js 2>/dev/null | head -10 || echo "No chunks found"
+            
+            # Vérification des limites
+            TOTAL_MB=$(du -sm .next/ | cut -f1)
+            if [ $TOTAL_MB -gt 50 ]; then
+              echo "⚠️ Warning: Build size exceeds 50MB threshold"
+            else
+              echo "✅ Build size is within acceptable limits"
+            fi
           else
             echo "❌ Build directory not found"
             exit 1
           fi
+
+      - name: 💾 Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          path: |
+            .next/cache
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+            ${{ runner.os }}-nextjs-
 
       - name: 🎯 Summary
         if: always()
@@ -76,5 +111,10 @@ jobs:
           echo "- 🧪 Tests" >> $GITHUB_STEP_SUMMARY
           echo "- 🏗️ Build" >> $GITHUB_STEP_SUMMARY
           echo "- 🔐 Security Audit" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### 📦 Build Info:" >> $GITHUB_STEP_SUMMARY
+          echo "- Node.js: v${{ env.NODE_VERSION }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Branch: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Commit: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Note:** Production deployment is handled automatically by Vercel on push to main branch." >> $GITHUB_STEP_SUMMARY
