--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -3,24 +3,32 @@ name: Staging Deployment
 on:
   push:
     branches: [develop]
+  workflow_dispatch: # Permet le déclenchement manuel
+
+env:
+  NODE_VERSION: "20"
+  ENABLE_TURBOPACK: false
 
 jobs:
   quality-checks:
     name: 🔍 Quality Checks
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: ${{ env.NODE_VERSION }}
+          cache: "npm"
 
       - name: 📦 Install dependencies
-        run: npm ci
+        run: npm ci --prefer-offline --no-audit
 
       - name: 🔍 Run ESLint
         run: npm run lint
@@ -43,18 +51,43 @@ jobs:
           NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
           NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
           NEXT_PUBLIC_FIREBASE_APP_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}
+          # Variables spécifiques staging
+          NEXT_PUBLIC_APP_URL: https://staging.portail-jhmh.vercel.app
+          # Optimisations
+          NEXT_TELEMETRY_DISABLED: 1
         run: npm run build
 
       - name: 🔐 Security Audit
         run: npm audit --audit-level=moderate
+        continue-on-error: true
+
+      - name: 📊 Bundle Size Check
+        run: |
+          echo "📦 Checking staging build size..."
+          if [ -d ".next" ]; then
+            TOTAL_SIZE=$(du -sh .next/ | cut -f1)
+            echo "Staging build size: $TOTAL_SIZE"
+          fi
+
+      - name: 💾 Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          path: |
+            .next/cache
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-staging-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-staging-${{ hashFiles('**/package-lock.json') }}-
+            ${{ runner.os }}-nextjs-staging-
 
   staging-notification:
     name: 📢 Staging Notification
     runs-on: ubuntu-latest
     needs: quality-checks
+    if: success()
 
     steps:
-      - name: 📤 Notify Vercel Deployment
+      - name: 📤 Deployment Summary
         run: |
           echo "## 🚀 Staging Deployment" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -62,9 +95,18 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Branch:** develop" >> $GITHUB_STEP_SUMMARY
           echo "**Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Author:** ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Time:** $(date -u +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### 🚀 Deployment Status" >> $GITHUB_STEP_SUMMARY
           echo "Vercel will automatically deploy this to the staging environment." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 🔗 Links" >> $GITHUB_STEP_SUMMARY
-          echo "- Check Vercel dashboard for deployment status" >> $GITHUB_STEP_SUMMARY
-          echo "- Staging URL will be available once deployment completes" >> $GITHUB_STEP_SUMMARY
+          echo "- [Vercel Dashboard](https://vercel.com/dashboard)" >> $GITHUB_STEP_SUMMARY
+          echo "- [Commit Details](https://github.com/${{ github.repository }}/commit/${{ github.sha }})" >> $GITHUB_STEP_SUMMARY
+          echo "- Staging URL: \`https://staging.portail-jhmh.vercel.app\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### 📝 Commit Message" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "${{ github.event.head_commit.message }}" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
