--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,14 +60,5 @@
     "src/**/*",
     "next.config.ts",
   ],
-  "exclude": [
-    "node_modules",
-    ".next",
-    "out",
-    "dist",
-    "build",
-    "coverage",
-    "*.config.js",
-    "*.config.ts",
-  ],
+  "exclude": ["node_modules", ".next", "out", "dist", "build", "coverage", "*.config.js"],
 }
